# gbilling-server

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.in  gbilling-server.desktop.in
data/: Makefile.am  Makefile.in
debian/: changelog  control  copyright  watch
pixmaps/: Makefile.am  Makefile.in
sounds/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  callback.c  callback.h  dev.h  gbilling.c  gbilling.h  gui.c  gui.h  main.c  main.h  server.c  server.h  setting.c  setting.h  sockc.c  sockc.h  sound.c  sound.h  sqlcb.c  sqlcb.h  sqldb.c  sqldb.h  version.h
ui/: Makefile.am  Makefile.in  about.ui  auth.ui  calendar.ui  chat.ui  client_setting.ui  cost_rotate.ui  cost_setting.ui  detail.ui  edit.ui  log_setting.ui  main.ui  move.ui  prepaid_setting.ui  search.ui  server_setting.ui  setting_item.ui  time.ui  total.ui  update_client.ui  update_cost.ui  update_item.ui  update_prepaid.ui
win32/: Makefile.win  gbilling-server.dev  gbilling-server.layout  gbilling-server_private.h  gbilling-server_private.rc
