dnl gBilling configuration script input.
dnl Process this file with autoconf to produce configuration script.
dnl Ardhan Madras <ajhwb@knac.com>

AC_INIT([configure.in])
AM_INIT_AUTOMAKE([gbilling-server], [0.3.2], [ajhwb@knac.com])
AM_MAINTAINER_MODE

AM_CONFIG_HEADER([config.h])

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_CHECK_HEADERS([sys/file.h])
AC_CHECK_HEADERS([sys/socket.h])
AC_CHECK_HEADERS([sys/time.h])
AC_CHECK_HEADERS([arpa/inet.h])

AM_PROG_LIBTOOL

dnl Check for libraries
PKG_CHECK_MODULES(PACKAGE, [gtk+-2.0 >= 2.18.9 glib-2.0 >= 2.22.5 gthread-2.0 >= 2.22.5 gstreamer-0.10 >= 0.10.29])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

dnl Set predefined stuff in config.h
if test "x${prefix}" = "xNONE"; then
  packageprefix=${ac_default_prefix}
else
  packageprefix=${prefix}
fi

AC_DEFINE_UNQUOTED(SQLITE_SUPPORT, 1, [SQLite support])
AC_DEFINE_UNQUOTED(GSTREAMER_SUPPORT, 1, [GStreamer support])

AC_DEFINE_UNQUOTED(PACKAGE_VERSION, "0.3.2", [Package version])
AC_DEFINE_UNQUOTED(PACKAGE_NAME, "gBilling Server", [Package name])
AC_DEFINE_UNQUOTED(PACKAGE_BUGREPORT, "ajhwb@knac.com", [Package bugreport])

AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${packageprefix}/share/${PACKAGE}", [Data directory])
AC_DEFINE_UNQUOTED(PACKAGE_PIXMAPS_DIR, "${packageprefix}/share/pixmaps", [Pixmaps directory])
AC_DEFINE_UNQUOTED(PACKAGE_DOC_DIR, "${packageprefix}/doc/${PACKAGE}", [Documentation directory])

AC_OUTPUT([Makefile
           gbilling-server.desktop
           src/Makefile
           pixmaps/Makefile
           data/Makefile
           ui/Makefile
           sounds/Makefile
          ])


echo "

Configuration:

    Source code location.. : ${srcdir}
    Prefix................ : ${prefix}
    Compiler.............. : ${CC}
"

echo "
konfigurasi selesai, jalankan 'make' untuk kompilasi dan
'make install' untuk instalasi
"
