## Process this file with automake to produce Makefile.in

gbilling_server_uidir = $(datadir)/gbilling-server/ui

gbilling_server_ui_DATA = \
	about.ui \
	detail.ui \
	prepaid_setting.ui \
	update_cost.ui \
	auth.ui \
	edit.ui \
	search.ui \
	update_item.ui \
	calendar.ui \
	log_setting.ui \
	server_setting.ui \
	update_prepaid.ui \
	chat.ui \
	main.ui \
	setting_item.ui \
	client_setting.ui \
	time.ui \
	cost_setting.ui \
	move.ui \
	update_client.ui \
	total.ui \
	cost_rotate.ui

EXTRA_DIST = $(gbilling_server_ui_DATA)
